Fixed modal's close icon z-index and modal's backdrop filter that were not working in Safari

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@
     --grid-cols: 9;
     --grid-rows: 9;
 
-    --modal-delay: 30ms;
-    --modal-delay-offset: 30ms;
+    --modal-delay: 80ms;
+    --modal-delay-offset: 80ms;
 }
 
 *, *::before, *::after {
@@ -206,6 +206,7 @@ img {
     inset: 0;
     /* background: linear-gradient(30deg, var(--background-color), var(--gradient-color)); */
     transition: all 200ms ease-in-out;
+    -webkit-backdrop-filter: blur(5px); /* Add this line first, it fixes blur for Safari*/
     backdrop-filter: blur(10px);
     z-index: 8;
 }
@@ -250,7 +251,7 @@ img {
 @keyframes scaleModalDown {
     0% 
         {   opacity: 0;
-            transform: scale(1.05);
+            transform: scale(1.1);
         }
     100% 
         {
@@ -264,6 +265,7 @@ img {
     top: -1rem;
     right: 1rem;
     cursor: pointer;
+    z-index: 1;
 }
 
 .icon-modal {
@@ -273,6 +275,7 @@ img {
     width: 100%;
     margin: 1rem;
     position: relative;
+    transform: translateY(5%);
 }
 
 .icon-name-container {
